syntax = 'proto3';

option java_multiple_files = true;
package grpc.service.file;

message FileKey {
  int64 key = 1;
}

message FileBase64 {
  string file = 1;
}

message FileInfo {
  string name = 1;
  string type = 2;
  int64 size = 3;
  bytes content = 4;
}

message Void {}

service FileService {
  rpc getFileBase64(FileKey) returns (FileBase64);
  rpc removeFile(FileKey) returns (Void);
  rpc saveNewFile(FileInfo) returns (FileKey);
}